# sems-pay

./: .gitignore  Anchor.toml  README.md  package-lock.json  task.md
backend/: .env.example  package.json
backend/src/: server.ts  solana.ts
backend/src/routes/: arbitrator.ts  contract.ts  swap.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/arbitrator/: page.tsx
dashboard/src/app/contracts/: page.tsx
dashboard/src/app/contracts/[id]/: page.tsx
dashboard/src/app/contracts/new/: page.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/components/: Navbar.tsx
dashboard/src/lib/: mock.ts
programs/sems-pay/: Cargo.toml
programs/sems-pay/src/: constants.rs  errors.rs  helpers.rs  lib.rs  state.rs
tests/: sems-pay.ts
